load("//c/k:meh.bzl", "meh")
load(":main.bzl", "apps")

cluster_bundles = [
    (
        k,
        glob(
            ["{}/*.yaml".format(k)],
            exclude = [],
            exclude_directories = 1,
        ),
    )
    for k in apps
]

by_cluster = {
    c: [k for k, _ in cluster_bundles if k.startswith("{}-".format(c))]
    for c_, _ in cluster_bundles
    for c in ["-".join(c_.split("-")[:3])]
}

filegroup(
    name = "deploy_cue",
    srcs = [
        "//cue.mod:cue_mod",
        "//cue.mod/gen/k8s.io:k8s_io",
    ] + glob(["*.cue"]),
    visibility = ["//visibility:public"],
)

meh(
    name = "meh",
    by_cluster = by_cluster,
    cluster_bundles = cluster_bundles,
)
