load("@rules_oci//oci:defs.bzl", "oci_image")
load("//earthly:earthly.bzl", "earthly_build")
load("//nix:nix.bzl", "nix_flake")
load("//oci:oci.bzl", "skopeo_copy")

# earthly inputs
filegroup(
    name = "earthly_inputs",
    srcs = [
        "k3d-config.toml",
        "k3s-wrapper.sh",
    ],
)

# nix flake
nix_flake(
    name = "flake",
    flakes = ["earthly"],
)

# build docker image
earthly_build(
    name = "k3d",
    build_args = ["K3S=1.25.10-k3s1"],
    data = [
        "earthly_inputs",
    ],
    earthly_bin = "flake_earthly",
    image = "quay.io/defn/dev:latest-k3d",
)

oci_image(
    name = "k3d_image",
    base = "@distroless_base",
    tars = [
      "k3d_earthly_build"
    ],
)

skopeo_copy(
    name = "k3d_push",
    image = ":k3d_image",
    remote_tags = ["latest"],
    repository = "169.254.32.1:5000/defn/dev/k3d",
)
