load("@rules_oci//oci:defs.bzl", "oci_image")

load("//oci:oci.bzl", "skopeo_copy")

oci_image(
    name = "k3d_image",
    base = "@defn_dev_k3d",
    tars = [
    ],
)

skopeo_copy(
    name = "k3d_push",
    image = ":k3d_image",
    remote_tags = ["latest"],
    repository = "169.254.32.1:5000/defn/dev/k3d",
)
