load("//cue:cue.bzl", "cue_export")
load("//nix:nix.bzl", "nix_flake")
load("//out:out.bzl", "copy_files")

# nix flake
nix_flake(
    name = "flake",
    flakes = [
        "cue",
    ],
)

# app configuration
cue_export(
    name = "app_config",
    srcs = ["flake_cue"],
    cues = glob(["*.cue"]),
    visibility = ["//visibility:public"],
)

copy_files(
    name = "app_config_outputs",
    gen = {
        "app_config.json": "app_config",
    },
)
