load("//cue:cue.bzl", "cue_export")
load("//out:out.bzl", "copy_files")

# app configuration
cue_export(
    name = "app",
    srcs = [
        "//pkg/cue:flake_cue",
    ],
    cues = glob(["*.cue"]),
    visibility = ["//visibility:public"],
)

copy_files(
    name = "app_config_outputs",
    gen = {
        "app.json": "app",
    },
)