load("//cue:cue.bzl", "cue_export")
load("//out:out.bzl", "copy_files")

# app configuration
cue_export(
    name = "app",
    srcs = [
        "//pkg/cue:flake_cue",
    ],
    cues = glob(["*.cue"]),
    visibility = ["//visibility:public"],
)

copy_files(
    name = "app_config_outputs",
    gen = {
        "app.json": "app",
    },
)

filegroup(
    name = "make_k8s_cue_script",
    srcs = ["make_k8s_cue.sh"],
)

filegroup(
    name = "k8s_go_mod",
    srcs = [
        "go.mod",
        "go.sum",
    ],
)

genrule(
    name = "gen_k8s_cue_schema",
    srcs = [
        "app",
        "k8s_go_mod",
        "//pkg/az:flake_jq",
        "//pkg/godev:flake_go",
    ],
    outs = ["cue.mod/gen"],
    cmd = "$(location make_k8s_cue_script) $(location app) $(location //pkg/az:flake_jq) $(location //pkg/godev:flake_go) $@",
    tools = ["make_k8s_cue_script"],
)
