load("//meh:cue.bzl", "cue")

cue(
    name = "app_config",
    srcs = glob(["*.cue"]),
    configs = ["flake_cue"],
)

filegroup(
    name = "aws_orgs",
    srcs = ["aws_orgs.txt"],
)

filegroup(
    name = "aws_accounts",
    srcs = ["aws_accounts.txt"],
)

filegroup(
    name = "template_org",
    srcs = ["template_org.txt"],
)

filegroup(
    name = "template_account",
    srcs = ["template_account.txt"],
)

filegroup(
    name = "aws_config_script",
    srcs = ["aws_config.sh"],
)

filegroup(
    name = "flake_path_script",
    srcs = ["flake_path.sh"],
)

filegroup(
    name = "flake_config",
    srcs = [
        "flake.json",
        "flake.lock",
        "flake.nix",
    ],
)

# aws configuration
genrule(
    name = "aws_config",
    srcs = [
        "aws_accounts",
        "aws_orgs",
        "template_account",
        "template_org",
    ],
    outs = ["aws_config.txt"],
    cmd = "$(location aws_config_script) $(location aws_orgs) $(location aws_accounts) $(location template_org) $(location template_account) $@",
    tools = ["aws_config_script"],
)

# aws cli wrapper
sh_binary(
    name = "aws_cli",
    srcs = ["aws_cli.sh"],
    args = [
        "$(location app_config)",
        "$(location :aws_config)",
    ],
    data = [
        "app_config",
        "aws_config",
    ],
)

# flake/direnv builder
genrule(
    name = "flake_cue",
    srcs = [
        "flake_path_script",
        "flake_config",
    ],
    outs = ["meh.txt"],
    cmd = "$(location flake_path_script) $@ which cue",
)
