load("//meh:cue.bzl", "cue")

filegroup(
    name = "aws_orgs",
    srcs = ["aws_orgs.txt"],
)

filegroup(
    name = "aws_accounts",
    srcs = ["aws_accounts.txt"],
)

filegroup(
    name = "template_org",
    srcs = ["template_org.txt"],
)

filegroup(
    name = "template_account",
    srcs = ["template_account.txt"],
)

filegroup(
    name = "aws_config_script",
    srcs = ["aws_config.sh"],
)

filegroup(
    name = "flake_path_script",
    srcs = ["flake_path.sh"],
)

filegroup(
    name = "flake_config",
    srcs = [
        "flake.json",
        "flake.lock",
        "flake.nix",
    ],
)

# build cue
genrule(
    name = "flake_cue",
    srcs = [
        "flake_path_script",
        "flake_config",
    ],
    outs = ["cue_bin"],
    cmd = "$(location flake_path_script) $@ which cue",
)

# build aws cli
genrule(
    name = "flake_aws",
    srcs = [
        "flake_path_script",
        "flake_config",
    ],
    outs = ["aws_bin"],
    cmd = "$(location flake_path_script) $@ which aws",
)

# aws configuration
genrule(
    name = "aws_config",
    srcs = [
        "aws_accounts",
        "aws_orgs",
        "template_account",
        "template_org",
    ],
    outs = ["aws_config.txt"],
    cmd = "$(location aws_config_script) $(location aws_orgs) $(location aws_accounts) $(location template_org) $(location template_account) $@",
    tools = ["aws_config_script"],
)

# app configuration
cue(
    name = "app_config",
    srcs = ["flake_cue"],
    cues = glob(["*.cue"]),
)

# aws cli wrapper
sh_binary(
    name = "aws_cli",
    srcs = ["aws_cli.sh"],
    args = [
        "$(location flake_aws)",
        "$(location app_config)",
        "$(location aws_config)",
    ],
    data = [
        "app_config",
        "aws_config",
        "flake_aws",
    ],
)
