load("//meh:cue.bzl", "cue")
load("//nix:nix.bzl", "nix_flake")

filegroup(
    name = "aws_orgs",
    srcs = ["aws_orgs.txt"],
)

filegroup(
    name = "aws_accounts",
    srcs = ["aws_accounts.txt"],
)

filegroup(
    name = "template_org",
    srcs = ["template_org.txt"],
)

filegroup(
    name = "template_account",
    srcs = ["template_account.txt"],
)

filegroup(
    name = "aws_config_script",
    srcs = ["aws_config.sh"],
)

filegroup(
    name = "earthfile_config",
    srcs = ["Earthfile"],
)

# aws configuration
genrule(
    name = "aws_config_cfg",
    srcs = [
        "aws_accounts",
        "aws_orgs",
        "template_account",
        "template_org",
    ],
    outs = ["aws_config.txt"],
    cmd = "$(location aws_config_script) $(location aws_orgs) $(location aws_accounts) $(location template_org) $(location template_account) $@",
    tools = ["aws_config_script"],
)

# nix flake
nix_flake(
    name = "flake",
    flakes = [
        "cue",
        "awscli",
        "earthly",
    ],
)

# app configuration
cue(
    name = "app_config",
    srcs = ["flake_cue"],
    cues = glob(["*.cue"]),
)

# aws cli wrapper
sh_binary(
    name = "aws_cli",
    srcs = ["aws_cli.sh"],
    args = [
        "$(location flake_aws)",
        "$(location app_config)",
        "$(location aws_config_cfg)",
    ],
    data = [
        "app_config",
        "aws_config_cfg",
        "flake_aws",
    ],
)

# build docker image
sh_binary(
    name = "earthly",
    srcs = ["earthly.sh"],
    args = [
        "$(location flake_earthly)",
        "$(location earthfile_config)",
        "$(location app_config)",
        "$(location aws_config_cfg)",
        "$(location flake_archives)",
    ],
    data = [
        "app_config",
        "aws_config_cfg",
        "earthfile_config",
        "flake_archives",
        "flake_earthly",
    ],
)
