load("//b/out:out.bzl", "copy_files")
load("//b/tutorial:tutorial.bzl", "tutorial")

tutorial(
    name = "tutorial.html",
    srcs = ["tutorial.cue"],
    visibility = ["//visibility:public"],
)

copy_files(
    name = "tutorial.html",
    dir = ".",
    gen = {
        "tutorial.html": "tutorial.html",
    },
)
