load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tf_lib",
    srcs = ["tf.go"],
    embedsrcs = ["tf.cue"],
    importpath = "github.com/defn/dev/m/tf",
    visibility = ["//visibility:public"],
    deps = [
        "//command/infra",
        "//command/root",
        "//tf/gen/terraform_aws_defn_account",
        "@com_github_aws_constructs_go_constructs_v10//:constructs",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//dataawsssoadmininstances",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//identitystoregroup",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//identitystoregroupmembership",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//identitystoreuser",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//organizationsaccount",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//organizationsorganization",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//provider",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//ssoadminaccountassignment",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//ssoadminmanagedpolicyattachment",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//ssoadminpermissionset",
        "@com_github_hashicorp_terraform_cdk_go_cdktf//:cdktf",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "tf",
    embed = [":tf_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cue",
    srcs = [
        "schema.cue",
        "tf.cue",
        "//command/infra:cue",
    ],
    visibility = ["//visibility:public"],
)
