load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tf_lib",
    srcs = [
        "stack-aws-account.go",
        "stack-aws-organization.go",
        "stack-coder-defn-ec2.go",
        "stack-global.go",
        "tf.go",
    ],
    embedsrcs = ["tf.cue"],
    importpath = "github.com/defn/dev/m/tf",
    visibility = ["//visibility:public"],
    deps = [
        "//command/infra",
        "//command/root",
        "//tf/gen/coder/coder/agent",
        "//tf/gen/coder/coder/app",
        "//tf/gen/coder/coder/datacoderparameter",
        "//tf/gen/coder/coder/datacoderworkspace",
        "//tf/gen/coder/coder/metadata",
        "//tf/gen/coder/coder/provider",
        "//tf/gen/coderlogin",
        "//tf/gen/terraform_aws_defn_account",
        "//tf/gen/terraform_aws_s3_bucket",
        "@com_github_aws_constructs_go_constructs_v10//:constructs",
        "@com_github_bitfield_script//:script",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//dataawsami",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//dataawsssoadmininstances",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//defaultvpc",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//ec2instancestate",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//iaminstanceprofile",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//iamrole",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//iamrolepolicyattachment",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//identitystoregroup",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//identitystoregroupmembership",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//identitystoreuser",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//instance",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//organizationsaccount",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//organizationsorganization",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//provider",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//secretsmanagersecret",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//secretsmanagersecretversion",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//securitygroup",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//ssoadminaccountassignment",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//ssoadminmanagedpolicyattachment",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v19//ssoadminpermissionset",
        "@com_github_hashicorp_terraform_cdk_go_cdktf//:cdktf",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "tf",
    embed = [":tf_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cue",
    srcs = [
        "schema.cue",
        "tf.cue",
        "//command/infra:cue",
    ],
    visibility = ["//visibility:public"],
)
