load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wg_lib",
    srcs = ["main.go"],
    importpath = "github.com/defn/dev/m/wg",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_noisysockets_noisysockets//:noisysockets",
        "@com_github_noisysockets_noisysockets//config",
        "@com_github_urfave_cli_v2//:cli",
        "@dev_gvisor_gvisor//pkg/sync",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_sys//unix",
    ],
)

go_binary(
    name = "wg",
    embed = [":wg_lib"],
    visibility = ["//visibility:public"],
)
