load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_uv//uv:pip.bzl", "pip_compile")

exports_files([
    "requirements_lock.txt",
])

# Generate requirements_lock.txt from requirements.in using uv
pip_compile(
    name = "generate_requirements_lock",
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

# Python agent example using Claude SDK with MCP tools
py_binary(
    name = "hello_py",
    srcs = ["hello.py"],
    main = "hello.py",
    deps = [
        "//servers/hello:mcp_py",
        requirement("claude-agent-sdk"),
    ],
)

py_test(
    name = "hello_py_test",
    srcs = ["hello_py_test.py"],
    deps = [
        "//servers/hello:mcp_py",
    ],
)
